# ws-bridge

./: CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: custom-codecs.md  native-client.md  reconnect.md  server.md  yew-client.md
examples/: echo_client.rs  echo_server.rs  reconnecting_client.rs  stateful_server.rs
examples/common/: mod.rs
src/: codec.rs  connection.rs  lib.rs  native_client.rs  reconnect.rs  server.rs  yew_client.rs
tests/: integration.rs
