[package]
name = "ws-bridge"
version = "0.1.1"
edition = "2021"
description = "Strongly-typed WebSocket endpoints for Rust — define once, use everywhere (axum server, yew/gloo browser client, tokio-tungstenite native client)"
license = "MIT"
repository = "https://github.com/meawoppl/ws-bridge"
keywords = ["websocket", "axum", "yew", "typed", "async"]
categories = ["web-programming::websocket", "network-programming"]

[features]
default = []
server = ["dep:axum", "dep:futures-util", "dep:tokio"]
yew-client = ["dep:gloo-net", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:futures-util"]
native-client = ["dep:tokio-tungstenite", "dep:tokio", "dep:futures-util"]
reconnect = ["dep:tokio", "dep:futures-util"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# server
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1", features = ["sync", "macros", "rt", "time"], optional = true }
futures-util = { version = "0.3", features = ["sink"], optional = true }

# yew-client
gloo-net = { version = "0.6", features = ["websocket"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Window", "Location"], optional = true }

# native-client
tokio-tungstenite = { version = "0.24", optional = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
